--- a/style.css
+++ b/style.css
@@ -40,12 +40,11 @@ header p{
 
 section{
 	color: #fff;
-	width: 80vh;
+	width: 70vh;
 	height: 70vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-top: 10vh;
 	
 }
 
@@ -97,4 +96,14 @@ section{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+#footer{
+	width: 70vh;
+	height: 5vh;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: flex-end;
+	margin-left: 7vh;
+
 }
