--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ section{
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 3vh;
 
 }
 #section_bas{
@@ -104,6 +105,20 @@ section{
 	display: flex;
 	justify-content: space-evenly;
 	align-items: flex-end;
-	margin-left: 10vh;
-	
+	margin-top: 15vh;
+
+}
+
+
+main{
+	display: flex;
+}
+
+form{
+	background-color: #F5F5F5;
+	width: 95vh;
+	height: 70vh;
+	margin-left: 20vh;
+	margin-top: 6vh;
+	border-radius: 20px;
 }
