--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 header{
-	width: 100vw;
+	width: 100%;
 	height: 15vh;
 	display: flex;
 	justify-content: center;
@@ -94,7 +94,6 @@ section{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	margin-bottom: 10vh;
 }
 #telhover,#mailhover, #pinhover{
 	display: flex;
@@ -134,7 +133,7 @@ section{
 	display: flex;
 	justify-content: space-evenly;
 	align-items: flex-end;
-	margin-left: 8vh;
+	margin-top: 15vh;
 
 }
 
@@ -239,10 +238,14 @@ textarea{
 	margin-top: 2vh;
 	margin-right: 3vh;
 }
+#footer{
+	margin-top: -0.01vh;
+	margin-left: 8vh;
+}
 
 @media only screen and (max-width: 770px){
 h1{
-	font-size: 20px;
+	font-size: 30px;
 	margin-top: -1vh;	
 }
 p{
@@ -251,10 +254,9 @@ p{
 h2{
 	font-size: 20px;
 }
-section{
-	width: 100%;
-}
 #section_haut{
+	margin-left: 15vh;
+	width: 85vh;
 	margin-top: -1vh;
 }
 
@@ -263,8 +265,8 @@ section{
 	justify-content: space-evenly;
 	flex-direction: row;
 	height: 10vh;
-	width: 90vh;
-	
+	width: 80vh;
+	margin-left: 20vh;
 	margin-top: -8vh;
 }
 #telhover, #mailhover, #pinhover{
@@ -274,25 +276,20 @@ section{
 #pin, #tel{
 	height: 5vh;
 	width: 5vh;
-	
-}
-#tel{
-	margin-right: -3vh;
-}
-#mailp{
-	margin-right: 10vh;
-}
 
+}
+#pin{
+	margin-left: 5vh;
+}
 #mail{
 	height: 4vh;
 	width: 4vh;
-	margin-right: -2vh;
-	
+	margin-left: 2vh;
 }
 
 form{
 	margin-top: 20vh;
-	margin-left: -82vh;
+	margin-left: -67vh;
 	height: 60vh;
 
 }
@@ -307,48 +304,7 @@ form{
 	margin-top: 5vh;
 }
 #tel{
+	margin-right: -3vh;
 	margin-left: 3vh;
 }
 }
-@media only screen and (max-width: 430px){
-
-	h1{
-	font-size: 30px;
-	margin-top: -1vh;	
-}
-p{
-	font-size: 10px;
-}
-h2{
-	font-size: 15px;
-}
-header{
-	width: 20vh;
-}
-#section_haut{
-	width: 85vh;
-}
-form{
-	width: 20vh;
-}
-textarea{
-	width: 20vh;
-}
-#footer{
-	width: 20vh;
-}
-#section_p{
-	width: 20vh;
-}
-#section_haut{
-	width: 20vh;
-}
-section{
-	width: 20vh;
-}
-}
-
-
-
-
-	
