--- a/style.css
+++ b/style.css
@@ -71,17 +71,17 @@ section{
 	justify-content: space-between;
 }
 
-#tel{
+#telo{
 	width: 6vh;
 	height: 6vh;
 }
 
-#mail{
+#mailo{
 	width: 5vh;
 	height: 4vh;
 	margin-left: 0.8vh;
 }
-#pin{
+#pino{
 	width: 6vh;
 	height: 6vh;
 	margin-left: 0.4vh;
@@ -94,6 +94,9 @@ section{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	margin-top: -5vh;
+	margin-bottom: 15vh;
+	
 }
 #telhover,#mailhover, #pinhover{
 	display: flex;
@@ -123,9 +126,7 @@ section{
 #mailp, #pinp, #telp{
 	margin-left: 5vh;
 }
-#mail{
-	margin-top: 1vh;
-}
+
 
 #footer{
 	width: 50vh;
@@ -273,18 +274,19 @@ h2{
 	width: 30vh;
 	height: 5vh;
 }
-#pin, #tel{
+#pino, #telo{
 	height: 5vh;
 	width: 5vh;
 
 }
-#pin{
+#pino{
 	margin-left: 5vh;
 }
-#mail{
+#mailo{
 	height: 4vh;
 	width: 4vh;
 	margin-left: 2vh;
+	margin-top: 1vh;
 }
 
 form{
@@ -295,7 +297,7 @@ form{
 }
 #footer{
 	margin-top: 4vh;
-	margin-left: 20vh;
+	margin-left: 18vh;
 }
 #form_bottom{
 	margin-top: -3vh;
@@ -303,8 +305,128 @@ form{
 #button{
 	margin-top: 5vh;
 }
-#tel{
+#telo{
 	margin-right: -3vh;
 	margin-left: 3vh;
 }
+}
+
+@media only screen and (max-width: 430px){
+		h1{
+			font-size: 30px;
+		}
+		h2{
+			font-size: 15px;
+		}
+		p{
+			font-size: 10px;
+		}
+		#telo, #pino{
+			width: 2vh;
+			height: 2vh;
+			margin-top: 1vh;
+		}
+		#mailo{
+			width: 2vh;
+			height: 2vh;
+		}
+#section_haut{
+	margin-left: 35vh;
+	width: 50vh;
+	margin-top: -3vh;
+}
+
+#section_p{
+	height: 10vh;
+	width: 50vh;
+	margin-left: 0vh;
+	margin-top: -8vh;
+}
+#telhover, #mailhover, #pinhover{
+	width: 33%;
+	height: 2vh;
+	
+
+}
+#mail{
+	margin-bottom: -2vh;
+}
+#pin{
+	margin-top: 1vh;
+}
+#tel{
+	margin-top: 1vh;
+}
+#mailp{
+	margin-left: 2vh;
+
+}
+#pinp{
+	margin-left: 1vh;
+}
+#telhover{
+	margin-right: -20vh;
+}
+#mailhover{
+	margin-right: -25vh;
+	margin-left: 2vh;
+}
+#pinhover{
+	margin-right: -35vh;
+	margin-left: 5vh;
+}
+
+form{
+	margin-top: 10vh;
+	margin-left: -9.5vh;
+	height: 60vh;
+	width: 45vh;
+
+}
+
+input{
+	width: 15vh;
+}
+#image_nom, #image_prenom{
+	margin-top: 0vh;
+}
+
+textarea{
+	width: 38vh;
+}
+#form_bottom{
+	margin-left: 3vh;
+}
+#button{
+	width: 15vh;
+	height: 5vh;
+}
+
+
+#tel{
+	margin-top: -4vh;
+}
+#mail{
+	margin-bottom: 1vh;
+	margin-top: -4vh;
+}
+#image_tel{
+	margin-top: 0vh;
+}
+
+#footer{
+	margin-top: 4vh;
+	width: 40vh;
+	margin-left: 3vh;
+}
+#form_bottom{
+	margin-top: -3vh;
+}
+#button{
+	margin-top: 5vh;
+}
+section{
+	width: 10vh;
+}
+
 }
