--- a/style.css
+++ b/style.css
@@ -355,12 +355,13 @@ form{
 	margin-right: -3vh;
 	margin-left: 3vh;
 }
+#pinhover:hover, #mailhover:hover, #telhover:hover{
+	background-color:#3E1F92 ;
+	border:  none;
 }
 
 
-#telhover:hover, #mailhover:hover, #pinhover:hover{
-	background-color: #3E1F92;
-	border: none;
+
 }
 
 
@@ -427,6 +428,10 @@ form{
 #pinhover{
 	margin-right: -35vh;
 	margin-left: 5vh;
+}
+#pinhover:hover, #mailhover:hover, #telhover:hover{
+	background-color:#3E1F92 ;
+	border:  none;
 }
 
 form{
