--- a/style.css
+++ b/style.css
@@ -217,6 +217,9 @@ textarea{
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+	font-size: 20px;
+	font-family: 'Alata', sans-serif; 
+	border: none;
 }
 
 #button:hover{
@@ -360,7 +363,10 @@ form{
 	border:  none;
 }
 
-
+#button{
+	font-size: 15px;
+	font-family: 'Alata', sans-serif; 
+}
 
 }
 
@@ -498,7 +504,10 @@ section{
 	margin-top: 0vh;
 }
 }
-
+button{
+	font-size: 15px;
+	font-family: 'Alata', sans-serif; 
+}
 
 @media only screen and (max-width: 380px){
 
@@ -506,10 +515,16 @@ header{
 	margin-left: 3vh;
 }
 form{
-	margin-right: -5vh;
+	
+	margin-left: -8vh;
+
 }
 textarea{
 	width: 40vh;
 	margin-left: -1vh;
 }
+}
+button{
+	font-size: 10px;
+	font-family: 'Alata', sans-serif; 
 }
