--- a/style.css
+++ b/style.css
@@ -304,9 +304,11 @@ p{
 h2{
 	font-size: 20px;
 }
+section{
+	width: 100vw;
+}
 #section_haut{
-	margin-left: 15vh;
-	width: 85vh;
+	width: 100vw;
 	margin-top: -1vh;
 }
 
@@ -315,12 +317,11 @@ h2{
 	justify-content: space-evenly;
 	flex-direction: row;
 	height: 10vh;
-	width: 80vh;
-	margin-left: 20vh;
+	width: 80vw;
 	margin-top: -8vh;
 }
 #telhover, #mailhover, #pinhover{
-	width: 30vh;
+	width: 33vw;
 	height: 5vh;
 }
 #pino, #telo{
@@ -339,14 +340,14 @@ h2{
 }
 
 form{
-	margin-top: 20vh;
-	margin-left: -67vh;
+	margin-top: 25vh;
+	margin-left: -85vw;
 	height: 60vh;
 
 }
 #footer{
 	margin-top: 4vh;
-	margin-left: 18vh;
+	margin-left: 30vh;
 }
 #form_bottom{
 	margin-top: -3vh;
@@ -391,22 +392,24 @@ form{
 			height: 2vh;
 		}
 #section_haut{
-	margin-left: 35vh;
-	width: 50vh;
+	margin-left: 50vh;
 	margin-top: -3vh;
 }
 
 #section_p{
 	height: 10vh;
-	width: 50vh;
+	width: 100vw;
 	margin-left: 0vh;
 	margin-top: -8vh;
 }
 #telhover, #mailhover, #pinhover{
-	width: 33%;
+	width: 50vw;
 	height: 2vh;
-	
+	margin-left: 25vh;	
 
+}
+#mailo{
+	margin-right: -1vh;
 }
 #mail{
 	margin-bottom: -2vh;
@@ -441,11 +444,16 @@ form{
 }
 
 form{
-	margin-top: 10vh;
-	margin-left: -9.5vh;
+	margin-top: 16vh;
+	margin-left: -4vh;
 	height: 60vh;
 	width: 45vh;
 
+}
+.imagefooter{
+	width: 50%;
+	height: 50%;
+	margin-left: 100%;
 }
 
 input{
@@ -516,15 +524,53 @@ header{
 }
 form{
 	
-	margin-left: -8vh;
+	margin-left: -6vh;
 
+}
+#section_haut{
+	margin-left: 80vw;
+}
+#section_p{
+	margin-left: -20vw;
+}
+#mailo{
+	margin-left: 10vw;
+}
+#pino{
+	margin-left: 20vw;
 }
 textarea{
 	width: 40vh;
 	margin-left: -1vh;
 }
-}
+
 button{
 	font-size: 10px;
 	font-family: 'Alata', sans-serif; 
+}
+}
+
+@media only screen and (max-width: 330px){
+
+#section_haut{
+	margin-left: 90vw ;
+}
+#section_p{
+	margin-left: -40vw;
+}
+#mailo{
+	margin-left: 15vw;
+}
+#pino{
+	margin-left: 30vw;
+}
+form{
+	margin-left: -17vw;
+}
+#footer{
+	margin-left: 1vw;
+}
+#telhover{
+	margin-left: 40vw;
+}
 }
